--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
 .header {
+}
+
+.header__main-wrap {
     padding: 15px 0;
     border-bottom: 1px solid lavender;
 }
@@ -26,7 +29,7 @@
     width: 20%;
     height: 100px;
     display: flex;
-    margin-right: 40px;
+    margin-right: 5%;
 }
 
 .header__main-contact-icon {
@@ -59,12 +62,12 @@
 }
 
 .header__main-search-input {
-    flex: 1;
+    width: 75%;
     line-height: 100px;
 }
 
 .header__main-search-input input {
-    width: 500px;
+    width: 100%;
     height: 40px;
     border: 2px solid lavender;
     padding-left: 20px;
@@ -88,19 +91,18 @@
     font-size: 1.4rem;
     top: 50%;
     transform: translateY(-50%);
-    right: 35px;
+    right: 15px;
 }
-
 
 /* cart */
 
 .row .header__main-cart {
     display: flex;
+    flex-wrap: nowrap;
 }
 
 .header__main-cart-icon {
-    padding-left: 30px;
-    padding-right: 20px;
+    padding-right: 12%;
     position: relative;
 }
 
@@ -143,3 +145,141 @@
     transform: translateY(-100%);
     right: 6px;
 }
+
+/* category */
+.header__category {
+}
+
+.header__category-list {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    padding-left: 0;
+}
+
+.header__category-item {
+}
+
+.header__category-item a {
+    color: #666666;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 22px 10px;
+}
+
+.header__category-item a:hover {
+    color: #e55472;
+}
+
+/* slider */
+
+.slider {
+    background: url('../img/slider.jpg') top center;
+    background-repeat: no-repeat;
+    background-size: 120%;
+    /* margin-top: 46px; 1/2 chiều ngang */
+    padding-top: 50%;
+    padding-bottom: 0;
+    position: relative;
+}
+
+.slider-info {
+    position: absolute;
+    bottom: 200px;
+  
+}
+
+.slider-info-wrap {
+    padding-left: 100px;
+}
+
+.slider-info-title {
+    font-size: 7.6rem;
+    font-weight: 1000;
+    margin-bottom: 15px;
+    line-height: 7.6rem;
+    margin-top: 0;
+}
+
+.slider-info-sub-title {
+    font-size: 2.5rem;
+    font-weight: 400;
+    padding-bottom: 20px;
+    margin-bottom: 25px;
+    margin-top: 0;
+    line-height: 2.5rem;
+    position: relative;
+}
+
+.slider-info-sub-title::before {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 100%;
+    width: 100px;
+    border-bottom: 2px solid #e55472;
+}
+
+.slider-info-brief {
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin-bottom: 24px;
+    max-width: 450px;
+    line-height: 3.2rem;
+}
+
+.slider-info-btn button {
+    width: 165px;
+    height: 52px;
+    border-radius: 40px;
+    border: none;
+    background-color: #e55472;
+    opacity: 0.95;
+}
+
+.slider-info-btn button:hover {
+    background-color: #565656;
+    transition: 0.5s;
+}
+
+.slider-info-btn button a {
+    padding: 13px 40px;
+    color: white;
+    font-size: 1.6rem;
+    font-weight: 500;
+}
+
+/* banner */
+.banner-title {
+    margin-top: 60px;
+    font-size: 3.6rem;
+    text-align: center;
+    word-spacing: 15px;
+    letter-spacing: 4px;
+}
+
+.row.banner-list {
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+
+.banner-item {
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
+    height: 100%;
+}
+
+.banner-item .banner-img {
+    width: 100%;
+    transition: all 1.5s ease 0s;
+}
+
+.banner-item:hover .banner-img {
+    cursor: pointer;
+    -webkit-transform: scale(1.12);
+    transform: scale(1.12);
+}
+
