--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -107,4 +107,9 @@
         font-size: 3rem;
         line-height: 3rem;
     }
+
+    /* new product */
+    .new__product-list {
+        padding: 0 8px;
+    }
 }
