--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -56,6 +56,11 @@
         padding: 0;
         margin: auto 0;
     }
+
+    /* brand */
+    .brand-item {
+        width: 25%;
+    }
 }
 
 /* Mobile */
@@ -111,5 +116,9 @@
     /* new product */
     .new__product-list {
         padding: 0 8px;
+    }
+    /* brand */
+    .brand-item {
+        width: 50%;
     }
 }
